packages/typ/tests/fixtures/diagnostics/0161_adt_constructor_int_arg_mismatch_04.ml.infer.expected
File "0161_adt_constructor_int_arg_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0161_adt_constructor_int_arg_mismatch_04 is not a valid module name.

File "0161_adt_constructor_int_arg_mismatch_04.ml", line 2, characters 13-17:
2 | let _ = Left true
                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
